# vega

./: .gitignore  AGENTS.md  ALLY.md  Cargo.toml  LICENSE.md  README.md  VEGA.md
.cursor/rules/: git-conventions.mdc  location-and-naming.mdc
docs/: acp.md  debugging.md  instructions.md  providers.md  tools.md
docs/iacp/: specification.md
docs/testing/: README.md  behaviour.md  streaming_fix.md  verification.md
examples/: acp_test.rs  iacp_basic.rs  mcp_config.json
src/: acp.rs  agent_instructions.rs  context.rs  embeddings.rs  input.rs  lib.rs  logging.rs  main.rs  providers.rs  streaming.rs  web.rs
src/agents/: chat.rs  mod.rs
src/mcp/: bridge.rs  client.rs  config.rs  mod.rs  server.rs  simple.rs  transport.rs
src/tools/: bash.rs  code_search.rs  confirmed.rs  edit_file.rs  list_files.rs  mod.rs  read_file.rs  read_logs.rs  web_search.rs
src/tui/: app.rs
static/: index.html
tests/: README.md  behavior_tests.rs  integration_tests.rs  streaming_integration_tests.rs
utils/: behavior_verifier.rs
vega-iacp/: Cargo.toml  README.md
vega-iacp/src/: lib.rs
