[package]
name = "ally"
version = "0.1.0"
edition = "2024"

[lib]
name = "ally"
path = "src/lib.rs"

[[bin]]
name = "ally"
path = "src/main.rs"

[dependencies]
rig = { version = "0.18.2", package = "rig-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
