[package]
name = "vega"
version = "0.1.0"
edition = "2024"

[lib]
name = "vega"
path = "src/lib.rs"

[[bin]]
name = "vega"
path = "src/main.rs"

[[bin]]
name = "behavior-verifier"
path = "utils/behavior_verifier.rs"

[dependencies]
rig = { version = "0.18.2", package = "rig-core" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
urlencoding = "2.1"
minijinja = "2.0"
agent-client-protocol = "0.1"
rustyline = "14.0"
rust-mcp-sdk = { version = "0.6.3", features = ["default", "client", "server"] }
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.0"
