[package]
name = "vega-iacp"
version = "0.1.0"
edition = "2024"
description = "Inter-Agent Communication Protocol implementation for the Vega AI agent framework"
license = "MIT"

[lib]
name = "vega_iacp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["net", "sync", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
thiserror = "1.0"
